load images and return to last structure

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -105,7 +105,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="https://lh3.googleusercontent.com/RHFmhdp0r4cR2FRK3M-_-R2XlhEMVZrfB3nZVxjzlhOScKyLz-_9hVQig2udG6W5jK3UKRM4D5rehc2lHwWJ2P4=w1280" style="width:3em;heigth:3em;" alt="GSTlogo">
+          <img src="https://lh3.googleusercontent.com/BQ6tACmgRMwmshe0548ghMgf0DrP6dMiMi0c9UqC6jr1DK6K9keI4biW7rHVs1tyq8YXKwQl8NP3kg9GIhjNKxE=w1280" style="width:3em;heigth:3em;" alt="GSTlogo">
         </a>
         <a class="navbar-brand cpink2" href="#">Game Space Tracker</a>
 
@@ -222,7 +222,7 @@
 
 </div>
 
-<div id="contactFormContainer2" class="container" style="display:none;">
+<div id="contactFormContainer2" class="container" style="display:block;">
   <!--CARDS PARA MOSTRAR LOS VIDEOJUEGOS-->
   <div class="container-fluid p-4">
     <div class="row row-cols-1 row-cols-md-3 g-4">
