--- a/src/views/start.hbs
+++ b/src/views/start.hbs
@@ -20,7 +20,7 @@
       font-family: Arial, sans-serif;
     }
     .jumbotron {
-      background-image: url("https://lh3.googleusercontent.com/TlqoGJPrkIL0szxqJUpMNEwHnSj9Lo59MonSxsveCbKKVEIqA-rluunkXy1I9xX7B2gURDz9aldCAhZsRtmFDABKlk5DphindnqbThwTcv1C-G2dl2cFBq5rXRGQGPJfnw=w1280");
+      background-image: url('https://lh5.googleusercontent.com/zTN8-iXKrxJpI824Q9fcmLe6mPEljLGTxlkqY9loje8XlUTCaMa5VQPqoD0x4Puq-3U-qnP8zBgEOK0o-s9v8zTfp64ehij8a3GGsS-mdYwhkqBCVvuiRLh2aAi6U7c0uA=w1280');
       background-size: 100% 100%;
       width:100%;
       height: 600px;
@@ -76,7 +76,8 @@
 </head>
 <body>
   <div class="jumbotron">
-    <img src="https://lh3.googleusercontent.com/RHFmhdp0r4cR2FRK3M-_-R2XlhEMVZrfB3nZVxjzlhOScKyLz-_9hVQig2udG6W5jK3UKRM4D5rehc2lHwWJ2P4=w1280" style="width:10em;heigth:10em;">
+    <img src="https://lh3.googleusercontent.com/BQ6tACmgRMwmshe0548ghMgf0DrP6dMiMi0c9UqC6jr1DK6K9keI4biW7rHVs1tyq8YXKwQl8NP3kg9GIhjNKxE=w1280" style="width:10em;heigth:10em;"
+    alt="GST Logo">
     <h1>Game Space Tracker</h1>
     <p>¡Bienvenido!<br>Aquí podrás administrar tus juegos favoritos para no perderte de nada.</p>
     <a href="/home" class="btn btn-primary btn-lg">Entrar</a>
