--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Game Space Tracker</title>
-    <link rel="icon" type="image/png" href="/src/images/GSTlogo.png">
+    <link rel="icon" type="image/png" href="https://lh4.googleusercontent.com/dhudnVzTfCLi3FZzUuSctQTD9ezeYQXZArzt1TYzEMV_zkRE7JY92cItAYyBbNOhaJKlv39LWXjEq0IYrVVkYzc=w1280">
 
     <!--<link
       rel="stylesheet"
